# DevOps-12.2

./: CMakeLists.txt  Dockerfile  Jenkinsfile  docker-compose.yml
src/: main.cpp
tests/: test.cpp
